# xplane-location-web

./: .gitignore  .prettierrc  README.md  datasample.txt  hwcontrols.js  logs.js  package-lock.json  package.json  server.js  tsconfig.json  udpreceive.js  webpack.config.js  xplane-comms.js  xplane-location-web.service
rust-server/: .gitignore  Cargo.toml  hw-inputs.json
rust-server/scripts/: build-for-raspberry.sh  setup-cross-compile-for-raspberry.sh
rust-server/src/: channels.rs  control_msgs.rs  gpio.rs  gpio_event_detect.rs  gpio_input_cfg.rs  main.rs  webserver.rs  xpc_types.rs  xplane_beacon.rs  xplane_comms.rs
rust-server/src/gpio/: event_detect.rs  input_config.rs  linux.rs  types.rs
rust-server/testdata/: xplane_cmd_toggle_strobe
ui-tests/: .gitignore  README.md  run-tests.sh  setup.sh
ui-tests/tests/: __init__.robot  basic-webui.robot  data-panel.robot  keywords.resource
ui-tests/variables/: local-chromium.py
www/: index.html  map.html
www/components/: js.cookie.js
www/js/: app.js
www/src/: app.ts  controls-definition.ts  data-listeners.ts  location-cookies.ts  types.ts  websocket.ts
www/src/hooks/: use-flight-data.ts  use-flight-track.ts  useFlightData.ts
www/src/ui-components/: annunciator-container.tsx  control-buttons.tsx  control-toggle-button.tsx  data-panel.tsx  flaps-control.tsx  flight-data-toggle-button.tsx  gear-control.tsx  map-view.tsx  react-root.tsx  toggle-button.tsx
www/style/: app.css
