[package]
name = "xplane-location-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
futures-util = "0.3.30"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
