[package]
name = "xplane-location-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
futures-util = "0.3.30"
log = "0.4.20"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["time"] }
warp = "0.3.6"


[target.'cfg(target_os = "linux")'.dependencies]
tokio-gpiod = "0.2.3"
